2012-06-06 Dario Rodriguez <dario.rodriguez@artica.es>

        * include/functions_groups.php
        include/functions_agents.php
        operation/tree.php: Improved performance on tree view
        for groups.

2012-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* operation/agentes/ver_agente.php
	 pandora_console/godmode/alerts/alert_list.builder.php: Fixed alert
	 creation when metaconsole is activated.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/exportdata.php
	  operation/agentes/exportdata.csv.php
	  operation/agentes/exportdata.excel.php: Fixed bug export
	data: If you choose first the type of export, the chosen 
	agent modules are not loaded into the page.

2012-06-06  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/planned_downtime.php: merged from trunk.
	fixed that 'Affect' column at 'planned downtime' might show
	bad values. cleaned source code style.

2012-06-05  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_modules.php: Fixed bug: When you
	copy a policy module, still liked to policy.

2012-06-05 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Fixed a missing group icons

2012-06-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/agent.php: Fixed function search_agent when 
	metaconsole is activated an one of the nodes return no agents.

2012-06-04  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed bug: 
	Standard user can not add actions to an alert.

2012-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions_io.php: Added new safe string function
	to scape strings to use it in regular expressions and
	change the parameters of enterprise functions to be
	compatible con last changes

2012-06-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/massive/massive_enable_disable_alerts.php
	 godmode/massive/massive_delete_action_alerts.php