@@ -1,3 +1,8 @@
+2012-06-06  Vanessa Gil <vanessa.gil@artica.es>
+
+	* operation/agentes/exportdata.php: Fixed bug:
+	If the data type of module is string, don't export the data in format: table, Excel or CSV.
+
 2012-06-06 Dario Rodriguez <dario.rodriguez@artica.es>
 
         * include/functions_groups.php
